--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -144,6 +144,7 @@
         </provider>
     </config-file>
     <preference name="loglevel" value="DEBUG" />
+    <preference name="WKWebViewOnly" value="true" />
     <preference name="orientation" value="default" />
     <preference name="target-device" value="universal" />
     <preference name="fullscreen" value="false" />
